examples/Passing/Compound/simple3.c
int main() {
    int a;
    {
        a = 4;
    }
    return a;
}
