examples/Failing/Variables/bad_type.c
int main() {
    inasvadfvqasd a = 5;
    return a;
}
